--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,11 @@
     <string name="price_too_low_error">Price cannot be lower than %d</string>
     <string name="time_error">Select valid time</string>
     <string name="date_error">Select valid date</string>
+    <string name="backup_file_name">backup %s</string>
+    <string name="sort_by_name_asc">By name (A → Z)</string>
+    <string name="sort_by_name_desc">By name (Z → A)</string>
+    <string name="sort_by_closest_training_desc">By closest trainig ↓</string>
+    <string name="sort_by_payment_desc">By last payment ↓</string>
+    <string name="sort_by_available_training_asc">Available trainings ↓</string>
+    <string name="sort_by_available_training_desc">Available trainings ↑</string>
 </resources>
