--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="sort_by_payment_desc">By last payment ↓</string>
     <string name="sort_by_available_training_asc">Available trainings ↑</string>
     <string name="sort_by_available_training_desc">Available trainings ↓</string>
+    <string name="invalid_phone_number">Invalid Phone Number</string>
+    <string name="phone_number">Phone number</string>
 </resources>
