SMS sending WIP

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -61,7 +61,7 @@
     <string name="sort_by_payment_desc">Datum nejbliší platby ↓</string>
     <string name="sort_by_available_training_asc">Počet tréninků ↑</string>
     <string name="sort_by_available_training_desc">Počet tréninků ↓</string>
-    <string name="invalid_phone_number">Neplatné telefonní číslo</string>
+    <string name="invalid_phone_number">Telefonní číslo je nutné  zadat ve formátu 111222333 nebo (+420) 111 222 333</string>
     <string name="phone_number">Telefonní číslo</string>
     <string name="sms_greeting">Ahoj</string>
     <string name="sms_footer">Měj se hezky</string>
