--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="phone_number">Phone number</string>
     <string name="sms_greeting">Hello</string>
     <string name="sms_footer">Have a nice day</string>
+    <string name="sms_permission_required_message">SMS permission is required in order to send SMS</string>
+    <string name="go_to_settings">Go to settings</string>
+    <string name="sms_confirm_dialog">Are you really want to send %1$s SMS?</string>
 </resources>
