--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -68,4 +68,7 @@
     <string name="sms_permission_required_message">Je potřeba přidělit aplikaci přidělit oprávnění odesílat SMS</string>
     <string name="go_to_settings">Přejít do nastavení</string>
     <string name="sms_confirm_dialog">Opravdu odeslat %1$s SMS?</string>
+    <string name="done">Hotovo</string>
+    <string name="sms_sending_progress">Odesílám SMS %d / %d</string>
+    <string name="sms_confirm_dialog_header">Odeslat SMS</string>
 </resources>
