--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="done">Done</string>
     <string name="sms_sending_progress">Sending SMS %d / %d</string>
     <string name="sms_confirm_dialog_header">Send SMS</string>
+    <string name="phone_number_exists">Client with this phone number already exists</string>
 </resources>
