SMS screen renamed

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -73,4 +73,5 @@
     <string name="sms_confirm_dialog_header">Odeslat SMS</string>
     <string name="phone_number_exists">Klient s tímto telefonním číslem již existuje</string>
     <string name="sms_was_sent">Odesláno v:</string>
+    <string name="sms_screen_title">SMS</string>
 </resources>
