--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="sms_screen_title">SMS</string>
     <string name="sms">SMS</string>
     <string name="other_options">Other options</string>
+    <string name="no_training_this_week">No training planned for this week</string>
 </resources>
