--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,19 @@
     <string name="sort_by_payment_desc">By last payment ↓</string>
     <string name="sort_by_available_training_asc">Available trainings ↑</string>
     <string name="sort_by_available_training_desc">Available trainings ↓</string>
+    <string name="invalid_phone_number">Invalid Phone Number</string>
+    <string name="phone_number">Phone number</string>
+    <string name="sms_greeting">Hello</string>
+    <string name="sms_footer">Have a nice day</string>
+    <string name="sms_permission_required_message">SMS permission is required in order to send SMS</string>
+    <string name="go_to_settings">Go to settings</string>
+    <string name="sms_confirm_dialog">Are you really want to send %1$s SMS?</string>
+    <string name="done">Done</string>
+    <string name="sms_sending_progress">Sending SMS %d / %d</string>
+    <string name="sms_confirm_dialog_header">Send SMS</string>
+    <string name="phone_number_exists">Client with this phone number already exists</string>
+    <string name="sms_was_sent">SMS was already sent at:</string>
+    <string name="sms_screen_title">SMS</string>
+    <string name="sms">SMS</string>
+    <string name="other_options">Other options</string>
 </resources>
