added translation(s), reverted telephoneNumber default value, removed unused imports

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -76,4 +76,5 @@
     <string name="sms_screen_title">SMS</string>
     <string name="sms">SMS</string>
     <string name="other_options">Ostatní</string>
+    <string name="no_training_this_week">Na tento týden nejsou naplánovány žádné tréninky</string>
 </resources>
